# fathomdx

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  PROGRESS.md  QUICKSTART.md  RALPH.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  ralph-findings.json  ralph-prd.md  ralph-progress.md
.github/workflows/: ci.yml  install-smoke.yml
addons/agent/: index.js  package.json
addons/browser-extension/: background.js  content.js  manifest.json  options.js  popup.js
addons/cli/: index.js  package-lock.json  package.json
addons/connect/: index.js  package-lock.json  package.json
addons/mcp-node/: index.js  package-lock.json  package.json
addons/scripts/: install.sh  lake-dir-README.md  migrate-to-canonical-paths.sh  mint-key.sh  preflight.sh
agent/: index.js  package-lock.json  package.json
agent/local-ui/: index.html
agent/plugins/: heartbeat.js  homeassistant.js  kitty.js  local-ui.js  sysinfo-linux.js  vault.js
api/: Dockerfile  _bgtasks.py  _engagement.py  _feed_alert.py  _feed_bridging.py  _feed_candidates.py  _feed_card_body.py  _feed_discrepancy.py  _feed_drift.py  _feed_judge.py  _feed_reflection.py  _feed_router.py  _feed_volunteer.py  _tags.py  _time.py  _tool_explain.py  _tool_schema.py  agent_instructions.py  auth.py  auto_regen.py  channels.py  chat_listener.py  cli.py  contacts.py  crystal.py  crystal_anchor.py  db.py  delta_client.py  drift.py  feed_crystal.py  feed_loop.py  feed_pressure.py  llm_config.py  messages.py  mood.py  pairing.py  pressure.py  prompt.py  providers.py  recall.py  (+12 more)
api/loop/: claude_code_watcher.py  convener.py  feed_orient.py  feed_orient_anchor.py  feed_orient_confidence.py  feed_orient_drift.py  intents.py  judge_history.py  llm.py  metric.py  pressure.py  process.py  prompts.py  puddle.py  recall.py  resonance.py  routes.py  telepathy.py  vampire.py  voice_priors.py  voice_stances.py  witness.py  worker.py
api/routes/: __init__.py  agent_instructions.py  agents.py  alerts.py  auth.py  contacts.py  feed.py  lake.py  media.py  messages.py  proposals.py  routines.py  sessions.py  sources.py  stack.py  vitals.py
api/tests/: conftest.py  test_auth.py  test_auto_regen_cooldown.py  test_chat_listener_session_locks.py  test_cosine_distance.py  test_credentials_file_perms.py  test_delta_client_retry.py  test_deltas_proxy_tags.py  test_dispatch_host_capability.py  test_feed_loop_freshness.py  test_health.py  test_image_path_sandbox.py  test_judge_history.py  test_not_found_status_codes.py  test_openai_endpoint.py  test_openai_multi_card.py  test_proposals.py  test_reserved_tags.py  test_routine_scheduler.py  test_routines_rewrite.py  test_search_rerank.py  test_settle_drift.py  test_slug.py  test_standpoint.py  test_standpoint_threading.py  test_tag_helpers.py  test_timeline_render.py  test_voice_priors.py  test_voice_stances.py  test_witness_constituting.py  test_witness_routines.py
cli/: index.js
connect/: index.js  package.json
data/: drift-history.json
delta-store/: Dockerfile  requirements.txt
delta-store/deltas/: __init__.py  backup.py  cli.py  contacts.py  db.py  embedder.py  media.py  migrate.py  models.py  plan.py  query.py  retrievals.py  server.py  store.py
delta-store/tests/: test_noise_modifier.py  test_parse_ts.py  test_plan_noise_rerank.py  test_plan_timeline.py  test_valence_modifier.py
docs/: README.md  STATUS.md  _glossary.md  contact-spec.md  feed-spec.md  routine-spec.md
docs/explanation/: agents-routines-helpers-hooks.md  forgetting-is-generative.md  identity-crystal.md  privacy-model.md  system-requirements.md  the-delta-model.md  what-sticks-and-what-wilts.md  what-the-lake-is.md  why-a-session-is-a-tag.md  why-fathom-is-one-mind-per-person.md
docs/how-to/: add-a-feed-source.md  back-up-and-restore-the-lake.md  change-llm-provider.md  connect-claude-code.md  delete-a-delta-or-tag.md  pair-another-machine.md  rotate-an-api-key.md  set-up-a-routine.md  troubleshoot-install.md  update-fathom.md  use-fathom-as-an-openai-endpoint.md  write-a-helper-plugin.md  write-a-hook.md  write-a-source-plugin.md
docs/reference/: cli.md  compose-services.md  contact-spec.md  delta-schema.md  env-vars.md  feed-spec.md  http-api.md  mcp-tools.md  reserved-tags-spec.md  routine-spec.md
docs/tutorials/: 01-the-lake-and-you.md  02-fathom-knows-whats-going-on.md  03-fathom-does-things.md
hooks/: fathom-recall-hook.sh
mcp/: server.py
mcp-node/: index.js  package-lock.json  package.json
scripts/: migrate-to-canonical-paths.sh  sync-provider-icons.sh
site/: .gitignore  contact.html  download.html  index.html  landing.html  mind.html  package-lock.json  package.json  placer.html  vite.config.js
site/functions/: _middleware.js
site/src/: download.css  main.js  style.css
source-runner/: Dockerfile  README.md  requirements.txt  server.py  source_runner.py
ui/: icons-1bit-explore.html  index.html  login.html  logo-neighborhood.html  loop-test.html  onboarding.html  prototype.html
ui/loop/: app.js  (+2 more)
(+25 files in other folders)
